hphp/test/slow/eq-array-data-ptr-constant.php.expectf
Fatal error: You cannot use this syntax on the left-hand side of an assignment. in %s/eq-array-data-ptr-constant.php on line 4